--- a/src/app/modules/notvisited/not.visited.component.html
+++ b/src/app/modules/notvisited/not.visited.component.html
@@ -3,30 +3,30 @@
   <h2>> 7 Days</h2>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> No. </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef> No. </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="account">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Account </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
+      <th style="width: 40%!important;" mat-header-cell *matHeaderCellDef> Account </th>
+      <td style="width: 40%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <ng-container matColumnDef="lastVisit">
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit</th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisit}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="lastVisitInDays">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator class="mat-elevation-z8" #paginator1 [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 
 
@@ -34,30 +34,30 @@
   <h2>> 14 Days</h2>
   <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> No. </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef> No. </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="account">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Account </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
+      <th style="width: 40%!important;" mat-header-cell *matHeaderCellDef> Account </th>
+      <td style="width: 40%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <ng-container matColumnDef="lastVisit">
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit</th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisit}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="lastVisitInDays">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator #paginator2 class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 
 
@@ -65,28 +65,28 @@
   <h2>> 30 Days</h2>
   <table mat-table [dataSource]="dataSource3" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> No. </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef> No. </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.position}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="account">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Account </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
+      <th style="width: 40%!important;" mat-header-cell *matHeaderCellDef> Account </th>
+      <td style="width: 40%!important;" mat-cell *matCellDef="let element"> {{element.account}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <ng-container matColumnDef="lastVisit">
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit</th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisit}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="lastVisitInDays">
-      <th style="width: 33%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
-      <td style="width: 33%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Last Visit in Days </th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.lastVisitInDays}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator #paginator3 class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
