--- a/src/app/modules/checklist/warehouse.checklist.component.html
+++ b/src/app/modules/checklist/warehouse.checklist.component.html
@@ -4,23 +4,11 @@
     <mat-form-field style="width: 33%; margin: 10px;">
       <mat-label>State</mat-label>
       <mat-select (selectionChange)="filterState($event)" [(ngModel)]="selectedState">
-        <mat-option value="All" selected>
+        <mat-option value="" selected>
           All States
         </mat-option>
-        <mat-option value="NSW">
-          NSW
-        </mat-option>
-        <mat-option value="QLD">
-          QLD
-        </mat-option>
-        <mat-option value="VIC">
-          VIC
-        </mat-option>
-        <mat-option value="WA">
-          WA
-        </mat-option>
-        <mat-option value="STAU">
-          STAU
+        <mat-option *ngFor="let state of states" [value]="state">
+          {{state}}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -28,75 +16,62 @@
     <mat-form-field style="width: 33%; margin: 10px;">
       <mat-label>Checklist</mat-label>
       <mat-select (selectionChange)="filterChecklist($event)" [(ngModel)]="selectedChecklist">
-        <mat-option value="Daily" selected>
-          Daily
-        </mat-option>
-        <mat-option value="Weekly">
-          Weekly
-        </mat-option>
-        <mat-option value="Monthly">
-          Monthly
-        </mat-option>
-        <mat-option value="Biannual">
-          Bi-Annual/Annual
+        <mat-option *ngFor="let checklist of checklists" [value]="checklist">
+          {{checklist.displayValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
 
     <mat-form-field style="width: 33%; margin: 10px;">
       <mat-label>Period</mat-label>
-      <mat-select (selectionChange)="filter($event)" [(ngModel)]="selectedOption">
-        <!-- <mat-option value="7" selected>
-          7 days
-        </mat-option>
-        <mat-option value="14">
-          14 days
-        </mat-option>
-        <mat-option value="30">
-          30 days
-        </mat-option> -->
-        <mat-option *ngFor="let period of periods" [value]="period.value">
-          {{period.viewValue}}
+      <mat-select (selectionChange)="filter($event)" [(ngModel)]="selectedPeriod">
+        <mat-option *ngFor="let period of periods" [value]="period">
+          {{period.displayValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
-  <h2>{{ selectedChecklist }} Warehouse Depot Checklist Compliance</h2>
-  <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
+  <h2>{{ selectedChecklist.displayValue }} Warehouse Depot Checklist Compliance</h2>
+  <table mat-table matSort matSortActive="compliance" matSortDirection="desc" matSortDisableClear [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="location">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Location </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.location}} </td>
+    <ng-container matColumnDef="state">
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.state}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="forklift">
-      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> VSR Vechicle </th>
-      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.forklift}} </td>
+    <ng-container matColumnDef="warehouse">
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Warehouse </th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.warehouse}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="address">
+      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.address}} </td>
     </ng-container>
 
     <ng-container matColumnDef="timesChecked">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times Checked </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Checked </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
     </ng-container>
 
     <ng-container matColumnDef="timesCompliant">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times Compliant </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Compliant </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
     </ng-container>
 
     <ng-container matColumnDef="compliance">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Compliance </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.compliance}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header="compliance"> Compliance </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.compliance}} </td>
     </ng-container>
 
     <ng-container matColumnDef="timesCritical">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times with Critical </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
+      <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times with Critical </th>
+      <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator class="mat-elevation-z8" #paginator2 [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator class="mat-elevation-z8" #paginator [pageSizeOptions]="[10, 20, 40, dataSource.data.length]" showFirstLastButtons></mat-paginator>
 </div>
