--- a/src/app/modules/checklist/warehouse.checklist.component.html
+++ b/src/app/modules/checklist/warehouse.checklist.component.html
@@ -22,11 +22,20 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field style="width: 33%; margin: 10px;">
+    <!-- <mat-form-field style="width: 33%; margin: 10px;">
       <mat-label>Period</mat-label>
       <mat-select (selectionChange)="filter($event)" [(ngModel)]="selectedPeriod">
         <mat-option *ngFor="let period of periods" [value]="period">
           {{period.displayValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field> -->
+    <mat-form-field style="width: 33%; margin: 10px;">
+      <mat-label>Date Range</mat-label>
+      <mat-select [formControl]="selectedRange" (selectionChange)="filter($event)" [(ngModel)]="selectedOption" multiple>
+      <!-- <mat-select [formControl]="selectedRange" (selectionChange)="filter($event)" [(ngModel)]="selectedOption"> -->
+        <mat-option *ngFor="let week of weeks" [value]="week[0]">
+          {{week[0]}} to {{week[1]}}
         </mat-option>
       </mat-select>
     </mat-form-field>
