--- a/src/app/modules/checklist/warehouse.checklist.component.html
+++ b/src/app/modules/checklist/warehouse.checklist.component.html
@@ -1,6 +1,7 @@
 
 <div style="padding: 10px; height: 100%;" fxLayout="row" fxLayoutAlign="space-around stretch">
-  <div fxLayout="column" fxLayoutAlign="start stretch" style="padding: 10px; width: 30%;">
+  <div fxLayout="column" fxLayoutAlign="start stretch" style="padding: 10px; width: 35%;">
+      <h3><b>Filters</b></h3>
     <!-- <div> -->
       <mat-form-field>
         <mat-label>State</mat-label>
@@ -15,7 +16,7 @@
       </mat-form-field>
     <!-- </div> -->
 
-    <div fxLayout="column" fxLayoutAlign="space-between stretch">
+    <!-- <div fxLayout="column" fxLayoutAlign="space-between stretch"> -->
       <mat-form-field>
         <mat-label>Checklist</mat-label>
         <mat-select (selectionChange)="filterChecklist($event)" [(ngModel)]="selectedChecklist">
@@ -24,47 +25,86 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-
-      <!-- <mat-form-field>
-        <mat-label>Period</mat-label>
-        <mat-select (selectionChange)="filter($event)" [(ngModel)]="selectedPeriod">
-          <mat-option *ngFor="let period of periods" [value]="period">
-            {{period.displayValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field> -->
-
-      <mat-form-field>
-        <mat-label>Date Range</mat-label>
-        <mat-select [formControl]="options" (selectionChange)="filterOptionList($event)" [(ngModel)]="selectedOption" multiple>
-          <mat-select-trigger>
-            {{options.value ? options.value[0]?.displayValue : ''}}
-            <span *ngIf="options.value?.length > 1">
-              (+{{options.value.length - 1}} {{options.value?.length === 2 ? 'other' : 'others'}})
-            </span>
-          </mat-select-trigger>
-          <mat-option *ngFor="let period of periods" [value]="period">
-            {{ period.displayValue }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-list>
+    <!-- </div> -->
+    <div fxLayout="column" fxLayoutAlign="space-between stretch">
+      <h3><b>Period</b></h3>
+      <!-- <mat-list>
         <mat-list-item *ngFor="let option of selectedOption; let index=index">
           <h3 matLine> {{option.displayValue}} </h3>
           <button mat-icon-button (click)="removeOption(index)" type="button">
             <mat-icon>close</mat-icon>
           </button>
         </mat-list-item>
-      </mat-list>
+      </mat-list> -->
+
+      <mat-form-field>
+        <mat-label>Date Range</mat-label>
+        <mat-select 
+          [formControl]="options" 
+          (selectionChange)="filterOptionList($event)" 
+          [(ngModel)]="selectedOption" 
+          [errorStateMatcher]="matcher"
+          multiple>
+          <mat-select-trigger>
+            {{options.value ? options.value[0]?.displayValue : ''}}
+            <span *ngIf="options.value?.length > 1">
+              (+{{options.value.length - 1}} {{options.value?.length === 2 ? 'other' : 'others'}})
+            </span>
+          </mat-select-trigger>
+          <!-- <mat-option>
+            None
+          </mat-option> -->
+          <mat-option *ngFor="let period of periods" [value]="period">
+          <!-- <mat-option *ngFor="let period of periods" [value]="period" [disabled]="options.value?.length == 1 && options.value?.includes(period)"> -->
+            {{ period.displayValue }}
+          </mat-option>
+        </mat-select>
+        <!-- <mat-hint>Errors appear instantly!</mat-hint> -->
+        <mat-error *ngIf="options.hasError('required')">Must select a date range to display.</mat-error>
+      </mat-form-field>
+
+      <!-- <mat-form-field> -->
+      <div style="padding-bottom: 17.5px;" fxLayout="row" fxLayoutAlign="end center">
+        <button mat-button color="primary" (click)="resetPeriodFilter()">Reset</button>
+
+        <button 
+          mat-raised-button 
+          color="primary" 
+          style="float: right;"
+          (click)="fetchData()"
+          [disabled]="options.value?.length == 0">
+          Update Table
+        </button>
+      </div>
+      <!-- </mat-form-field> -->
+
+      <table mat-table [dataSource]="optionSource" class="mat-elevation-z8" style="width: 100%;">
+
+        <ng-container matColumnDef="period">
+          <th style="width: 90%!important;" mat-header-cell *matHeaderCellDef> Period </th>
+          <td style="width: 90%!important;" mat-cell *matCellDef="let element"> {{element.displayValue}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="close">
+          <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef>  </th>
+          <td style="width: 10%!important;" mat-cell *matCellDef="let element">
+            <button mat-icon-button (click)="removeOption(element)" type="button">
+              <mat-icon>close</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- <tr mat-header-row *matHeaderRowDef="displayedOptionColumns; sticky: true"></tr> -->
+        <tr mat-row *matRowDef="let row; columns: displayedOptionColumns;"></tr>
+      </table>
+      <mat-paginator class="mat-elevation-z8" #paginator2 [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
     </div>
     
   </div>
 
   <div style="width: 100%; padding: 10px;">
     <h2>{{ selectedChecklist.displayValue }} Warehouse Depot Checklist Compliance</h2>
-    <table mat-table matSort matSortActive="compliance" matSortDirection="desc" matSortDisableClear [dataSource]="dataSource" class="mat-elevation-z8">
+    <table style="width: 100%;" mat-table matSort matSortActive="compliance" matSortDirection="desc" [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="state">
         <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
@@ -83,22 +123,22 @@
 
       <ng-container matColumnDef="timesChecked">
         <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Checked </th>
-        <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
+        <td style="width: 10%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
       </ng-container>
 
       <ng-container matColumnDef="timesCompliant">
-        <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Compliant </th>
-        <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
+        <th style="width: 12%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Compliant </th>
+        <td style="width: 12%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
       </ng-container>
 
       <ng-container matColumnDef="compliance">
-        <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header="compliance"> Compliance </th>
-        <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.compliance}} </td>
+        <th style="width: 8%!important;" mat-header-cell *matHeaderCellDef mat-sort-header="compliance"> Compliance </th>
+        <td style="width: 8%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.compliance * 100 + "%"}} </td>
       </ng-container>
 
       <ng-container matColumnDef="timesCritical">
         <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times with Critical </th>
-        <td style="width: 10%!important;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
+        <td style="width: 10%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
